# AleasatV2

./: .ccsproject  .cproject  .gitconfig  .gitignore  .gitlab-ci.yml  README.md  comms.code-workspace  mops.code-workspace  obc.code-workspace  project.yml  rtc_time_test.py  run-clang-format.py  sim.code-workspace
alea-fsw/obc-fw/: .clang-format  CMakeLists.txt  LICENSE  README.md  obc-fw.gitlab-ci.yml  project.yml
alea-fsw/obc-fw/common/firmware/: fw_defines.h.in  fw_structs.c  fw_structs.h
alea-fsw/obc-fw/common/flashdefs/: alea_v1_flashdefs.h  launchpad_1224_flashdefs.h  obc_flashdefs.h
alea-fsw/obc-fw/common/util/: asm_utils.h  obc_crc.c  obc_crc.h
alea-fsw/obc-fw/lib/FreeRTOS_V10.4.6/: CMakeLists.txt  FreeRTOSConfig.h  application_defined_privileged_functions.h
alea-fsw/obc-fw/lib/dsplib/: CMakeLists.txt
alea-fsw/obc-fw/lib/littlefs-2.4.2/: CMakeLists.txt
alea-fsw/obc-fw/lib/minmea/: CMakeLists.txt  minmea_compact_ti-rtos.h
alea-fsw/obc-fw/lib/tiny-AES-c/: CMakeLists.txt
alea-fsw/obc-fw/main/: linker.cmd  main.c
alea-fsw/obc-fw/main/app/: main.cmake  obc_main.c
alea-fsw/obc-fw/main/boot/: boot_error.h  boot_fapi.c  boot_fapi.h  boot_lfs.c  boot_lfs.h  boot_mibspi.c  boot_mibspi.h  (+6 more)
alea-fsw/obc-fw/platform/: CMakeLists.txt
alea-fsw/obc-fw/scripts/: activate_python.sh  formatter_docker.sh  fw_build.sh  fw_build_docker.sh  fw_test.sh  fw_test_docker.sh
alea-fsw/python/alea-common/: README.md  pyproject.toml
alea-fsw/python/alea-sim/: .gitignore  Dockerfile  README.md  alea-sim.gitlab-ci.yml  known_issues.md  pyproject.toml
alea-fsw/python/alea-test/: .gitignore  README.md  alea-test.gitlab-ci.yml  pyproject.toml
alea-fsw/python/alea-ttc/: README.md  pyproject.toml
alea-gsw/alea-san-antonio/: .gitignore  pyproject.toml
alea-gsw/alea-san-antonio/scripts/: san_antonio.sh
alea-gsw/apps/aleasim-worker/: Dockerfile  aleasim-worker.dockerignore  packages.debian  pyproject.toml
alea-gsw/apps/ground-station-client/: .dockerignore  .flake8  Dockerfile  docker-compose.yml  iq_receiver.grc  pyproject.toml  satnogs_iq_receiver.py  tox.ini
alea-gsw/apps/obc-grpc/: .gitignore  README.md  obc-grpc.Dockerfile  obc-grpc.Dockerfile.dockerignore  pyproject.toml
obc-firmware/: .cproject  .project  CMakeLists.txt  cmake_wrapper.sh  fw_build.sh  fw_test.sh  project.yml
obc-firmware/aleasat/rtos/: rtos.h
obc-firmware/aleasat/tests/: test_commands.c  test_commands.h
obc-firmware/aleasat/tms570/: tms_i2c.c  tms_mibspi.c  tms_mibspi.h  tms_spi.c  tms_uart.c  tms_uart.h
obc-firmware/cmake/: ti-cgt-arm.cmake
obc-firmware/common/: obc_main.h  obc_misra.h
obc-firmware/common/firmware/: fw_memmap.h  fw_structs.c  fw_structs.h
obc-firmware/common/util/: asm_utils.asm  obc_crc.c
obc-firmware/lib/FreeRTOS_V10.4.6/: CMakeLists.txt  FreeRTOSConfig.h  application_defined_privileged_functions.h
obc-firmware/lib/dsplib/: CMakeLists.txt  README.md
obc-firmware/lib/f021-api/: CMakeLists.txt
obc-firmware/lib/littlefs-2.4.2/: CMakeLists.txt
obc-firmware/lib/minmea/: minmea.h
obc-firmware/lib/printf/: CMakeLists.txt  printf.c
obc-firmware/lib/tiny-AES-c/: CMakeLists.txt
obc-firmware/main/: linker.cmd
obc-firmware/main/app/: main.cmake  obc_main.c
obc-firmware/main/boot/: main.cmake  obc_main.c
obc-firmware/main/startup/: obc_main.c
obc-firmware/orcasat/: obc_main.c  obc_main.h  obc_misra.h  obc_notification.c
obc-firmware/orcasat/examples/: gpio_interrupt_example.c  orcasat_examples.h
obc-firmware/orcasat/featuredefs/: alea_v1_featuredefs.h  launchpad_1224_featuredefs.h  obc_featuredefs.h
obc-firmware/orcasat/hardware-drivers/: obc_ecc_flash.c  obc_flash.c  obc_flash.h  obc_mram.c  obc_rtc.c  obc_rtc.h  obc_temperature.c
obc-firmware/orcasat/hardware-mock/: flash_mock.c  mram_mock.h  rtc_mock.c
obc-firmware/orcasat/hardwaredefs/: alea_v1_hardwaredefs.h  launchpad_1224_hardwaredefs.h
obc-firmware/orcasat/interfaces/: obc_adc.c  obc_adc.h  obc_mibspi.c  obc_mibspi.h  obc_uart.c  obc_uart.h
obc-firmware/orcasat/rtos/: obc_rtos.c  obc_rtos.h  rtos_customization.h
obc-firmware/orcasat/system/: obc_error.h  obc_stack_overflow.c  obc_startup.c
obc-firmware/orcasat/tasks/: blinky.c  blinky.h
obc-firmware/orcasat/unit_tests/: readme.txt  test_ecc_flash.c  test_filesystem.c  test_flash.c  test_log_sys.c  unit_tests.h
obc-firmware/orcasat/utilities/: obc_utils.c  obc_utils.h
obc-firmware/platform/: CMakeLists.txt
obc-firmware/platform-1224-launchpad/include/: FreeRTOS.h  adc.h  can.h  gio.h  rtos_croutine.h  rtos_portmacro.h  rtos_projdefs.h  sys_vim.h  system.h
obc-firmware/platform-1224-launchpad/source/: mibspi.c  notification.c  rtos_event_groups.c  rtos_mpu_wrappers.c  rtos_queue.c  rtos_task.c
obc-firmware/platform-alea-v1/: platform-alea-v1.dil
obc-firmware/platform-alea-v1/include/: FreeRTOSConfig.h  rtos_croutine.h  rtos_list.h  rtos_queue.h  rtos_semphr.h  rtos_task.h  rtos_timer.h  sci.h  sys_vim.h
obc-firmware/platform-alea-v1/source/: notification.c  rtos_heap.c  rtos_queue.c  rtos_task.c  spi.c  sys_link.cmd  sys_vim.c
obc-firmware/platform/alea-v1/: linker.cmd
obc-firmware/platform/common/: entrypoint.asm  exc_ram.asm  fw_memmap.h  isr.asm  linker.cmd
obc-firmware/platform/launchpad/: linker.cmd
obc-firmware/printf/: printf.c  printf.h
obc-firmware/scripts/: check-style.sh  cmake_wrapper.sh  docker_user.sh  docker_wrapper.sh  fw_build.sh  fw_test.sh
obc-firmware/template/: firmware_info.h.in
obc-firmware/test/tests/: test_adcs_quest.c  test_circ_buf.c  test_crc.c  test_data_fmt.c  test_gps.c  test_obc_time.c
obc-firmware/tools/build_sys/: post_build.py  srec.py
obc-firmware/tools/cmake/: cmake_wrapper.sh
obc-firmware/tools/cmd_sys/: cmd_sys.json  cmd_sys_gen.py  cmd_sys_test.json
obc-firmware/tools/docker/: Dockerfile  setup.sh
obc-firmware/tools/infra/: check-style.sh  jlink-flash-alea-v1.sh
obc-firmware/tools/logging/: log_gen.py  log_gen_template.h  log_ids.json  log_ids_h_gen.py  log_ids_template.h  log_specs.json
obc-firmware/tools/rtos/: obc_tasks.json  obc_tasks_gen.py
(+1881 files in other folders)
