[tool.poetry]
name = "alea-common"
version = "0.1.0"
description = ""
authors = ["ALEASAT <administrator@aleasat.space>"]
readme = "README.md"
packages = [{include = "alea"}]

[tool.poetry.dependencies]
python = ">=3.10"

numpy = { version = "^2.1.1", optional = true }

[tool.poetry.extras]
data-field-ndarray = ["numpy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
