[tool.poetry]
name = "alea-sim"
version = "0.1.0"
description = ""
authors = ["ALEASAT <administrator@aleasat.space>"]
readme = "README.md"
packages = [{include = "alea"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.0"
ahrs = "^0.3.1"
scipy = "^1.14.0"
skyfield = "^1.49"
sgp4 = "^2.23"
pyjson5 = "^1.6.6"
pygeomag = { git = "https://gitlab.com/alea-2020/adcs/pygeomag.git" }
matplotlib = "^3.9.2"

[tool.poetry.group.test.dependencies]
parameterized = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
