[tool.poetry]
name = "alea-test"
version = "0.1.0"
description = ""
authors = ["ALEASAT <administrator@aleasat.space>"]
readme = "README.md"
packages = [{include = "alea"}]
include = ["alea/test/stk/data/*.csv", "alea/test/stk/data/*.json"]

[tool.poetry.dependencies]
python = ">=3.10"
alea-ttc = {path = "../alea-ttc", develop = true}
xmlrunner = "^1.7.7"
numpy = "^2.1.1"
parameterized = "^0.9.0"
ahrs = "^0.3.1"
astropy = "^6.1.4"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
